<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <!-- Room BOHR -->
        <CheckBox
            android:id="@+id/checkbox_filter_room_1"
            android:textSize="18dp"
            android:text="@string/filter_room_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_2"
            android:textSize="18dp"
            android:text="@string/filter_room_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_3"
            android:textSize="18dp"
            android:text="@string/filter_room_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_4"
            android:textSize="18dp"
            android:text="@string/filter_room_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_5"
            android:textSize="18dp"
            android:text="@string/filter_room_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_6"
            android:textSize="18dp"
            android:text="@string/filter_room_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_7"
            android:textSize="18dp"
            android:text="@string/filter_room_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_8"
            android:textSize="18dp"
            android:text="@string/filter_room_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_9"
            android:textSize="18dp"
            android:text="@string/filter_room_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_filter_room_10"
            android:textSize="18dp"
            android:text="@string/filter_room_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

</ScrollView>
