<resources>
    <string name="app_name">MaReuApplication</string>

    <!-- List of room names -->
    <string name="room_1">Bohr</string>
    <string name="room_2">Dirac</string>
    <string name="room_3">Einstein</string>
    <string name="room_4">Faraday</string>
    <string name="room_5">Feynman</string>
    <string name="room_6">Heisenberg</string>
    <string name="room_7">Maxwell</string>
    <string name="room_8">Newton</string>
    <string name="room_9">Pauli</string>
    <string name="room_10">Planck</string>

    <!-- ListMeetingsFragment.java -->
    <string name="toolbar_name_list_meeting_activity">Me Réu</string>

    <!-- AddMeetingFragment.java -->
    <string name="error_msg">Must be after start hour</string>

    <!-- fragment_list_meetings.xml -->
    <string name="background_txt">No meetings</string>
    <string name="fab_content_description">Button to add a new meeting</string>

    <!-- fragment_list_employees.xml -->
    <string name="toolbar_name_frag_list_meeting">Ma Réu</string>

    <!-- fragment_info_meeting.xml -->
    <string name="toolbar_name_frag_list_employees">Select participants</string>
    <string name="txt_participants">Participants</string>

    <!-- fragment_info_meeting.xml -->
    <string name="text_info_meeting_date">On : </string>
    <string name="text_info_meeting_hour">At : </string>
    <string name="text_info_meeting_room">Room : </string>

    <!-- fragment_add_meeting.xml -->
    <string name="toolbar_name_frag_add_meeting">Create Meeting</string>
    <string name="edit_input_object_meeting">Object</string>
    <string name="edit_input_room_meeting">Room meeting</string>
    <string name="edit_input_date_meeting">Date</string>
    <string name="edit_input_hour_start_meeting">Start :</string>
    <string name="edit_input_hour_end_meeting">End :</string>
    <string name="edit_input_participants_meeting">Participants</string>
    <string name="edit_input_participants_info">Information</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_ok">OK</string>

    <!-- menu_list_meetings_fragment.xml -->
    <string name="title_icon_filter_by_date">Filter by date</string>
    <string name="title_icon_filter_by_room">Filter by room</string>

    <!-- menu_add_meeting_fragment.xml -->
    <string name="title_icon_reset">Reset</string>

    <!-- list_meetings_item.xml -->
    <string name="icon_meeting_status_content_description">Status Meeting icon</string>
    <string name="icon_delete_meeting_content_description">Delete Meeting icon</string>
    <!-- THE FOLLOWING VALUES ARE DEFAULT VALUES FOR TESTING DISPLAY ONLY -->
    <string name="title_item_recycler_view">Meeting A (FARADAY)</string>
    <string name="text_item_recycler_view">01/10/20 – 10:00 - 11:00</string>
    <string name="subtext_item_recycler_view">nicolasmoges@gmail.com</string>

    <!-- MeetingRoomDialog.java -->
    <string name="title_dialog_meeting_room">Select Meeting room</string>

    <!-- DateDialog.java -->
    <string name="title_dialog_date">Select Date</string>

    <!-- ListMeetingsFragment.java -->
    <!-- Dialog Confirm Delete Meeting -->
    <string name="title_dialog_confirm_delete">Delete meeting</string>
    <string name="text_dialog_confirm_delete">This meeting will be deleted. Confirm ?</string>
    <string name="btn_yes_dialog_confirm_delete">YES</string>
    <string name="btn_no_dialog_confirm_delete">NO</string>

    <!-- Dialog Filter by room -->
    <string name="title_dialog_filter_by_room">Select rooms</string>
    <string name="btn_yes_confirm_filter_by_room">Yes</string>
    <string name="btn_no_confirm_filter_by_room">No</string>
    <string name="filter_room_1">Room Bohr</string>
    <string name="filter_room_2">Room Dirac</string>
    <string name="filter_room_3">Room Einstein</string>
    <string name="filter_room_4">Room Faraday</string>
    <string name="filter_room_5">Room Feynman</string>
    <string name="filter_room_6">Room Heisenberg</string>
    <string name="filter_room_7">Room Maxwell</string>
    <string name="filter_room_8">Room Newton</string>
    <string name="filter_room_9">Room Pauli</string>
    <string name="filter_room_10">Room Planck</string>

    <!-- Dialog Filter by date -->
    <string name="title_dialog_filter_by_date">Select dates</string>
    <string name="btn_yes_confirm_filter_by_date">Yes</string>
    <string name="btn_no_confirm_filter_by_date">No</string>
    <string name="checkbox_title_option1">From : </string>
    <string name="checkbox_title_option2">Period : </string>
    <string name="hint_option1_date">Date :</string>
    <string name="hint_option2_start_date">From :</string>
    <string name="hint_option2_end_date">To :</string>


</resources>


