<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:orientation="vertical">

    <!-- First option for filtering date -->
    <CheckBox
        android:id="@+id/checkbox_filter_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/checkbox_title_option1"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_filter_date_1_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:hint="@string/hint_option1_date"
        app:boxBackgroundColor="#ECECF1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_filter_date_1_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Second option for filtering date -->
    <CheckBox
        android:id="@+id/checkbox_filter_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/checkbox_title_option2"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_filter_date_2_start_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:hint="@string/hint_option2_start_date"
        app:boxBackgroundColor="#ECECF1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_filter_date_2_start_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_filter_date_2_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:hint="@string/hint_option2_end_date"
        app:boxBackgroundColor="#ECECF1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_filter_date_2_end_date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>