<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reset_filters_item_menu"
        android:icon="@drawable/ic_baseline_refresh_white_24dp"
        app:showAsAction="always"
        android:title="@string/title_icon_reset"
        />
    <item
        android:id="@+id/filter_by_date_item_menu"
        android:icon="@drawable/ic_baseline_access_time_white_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/title_icon_filter_by_date"
        />
    <item
        android:id="@+id/filter_by_room_item_menu"
        android:icon="@drawable/ic_baseline_location_on_white_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/title_icon_filter_by_room"
        />
</menu>